# AI_Book_Hackathon-giaic

./: agent.py  api.py  docusaurus.config.ts  package-lock.json  package.json
.claude/: settings.local.json
.docusaurus/: client-modules.js  docusaurus.config.mjs  i18n.json  registry.js  routesChunkNames.json
.docusaurus/docusaurus-plugin-content-blog/default/: site-blog-2019-05-28-first-blog-post-md-e27.json  site-blog-2019-05-29-long-blog-post-md-736.json  site-blog-2021-08-01-mdx-blog-post-mdx-593.json  site-blog-2021-08-26-welcome-index-md-d9f.json
.docusaurus/docusaurus-plugin-content-docs/default/: __mdx-loader-dependency.json  site-docs-01-robotic-nervous-system-01-introduction-physical-ai-md-c83.json  site-docs-01-robotic-nervous-system-02-ros-2-architecture-md-2d4.json  site-docs-01-robotic-nervous-system-03-ros-2-python-development-md-d85.json  (+32 more)
backend/: .gitignore  main.py  performance_test.py  pyproject.toml  requirements.txt  retrieve.py
backend/api/: agent_integration.py  dependencies.py  main.py  models.py  test_api.py
backend/tests/: test_chunker.py  test_crawler.py  test_embedder.py  test_retrieve.py  test_storage.py
specs/002-rag-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-rag-retrieval/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-openai-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-fastapi-backend/: plan.md  spec.md  tasks.md  tasks_concise.md
src/css/: custom.css
src/pages/: index.tsx
(+26 files in other folders)
